==> mindThomas/STM32-libraries/Periphirals/STM32F0/I2C/I2C.cpp <==
#include "I2C.h"
#include "Priorities.h"
#include "Debug.h"
#include <math.h>
#include <string.h> // for memset

void I2C::DeInitPeripheral()
{
	if (!_hRes) return;
	if (_hRes->port == PORT_I2C1) {
		/* Peripheral clock disable */
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_I2C1);

		// ToDo: Deinit GPIO pins

		/* I2C1 interrupt DeInit */
		HAL_NVIC_DisableIRQ(I2C1_IRQn);
	}
}

void I2C::InitPeripheral(port_t port, uint32_t frequency)
{
	LL_GPIO_InitTypeDef GPIO_InitStruct = {0};

	bool firstTime = false;

	switch (port)
	{
		case PORT_I2C1:
			if (!resI2C1) {
				resI2C1 = new I2C::hardware_resource_t;
				memset(resI2C1, 0, sizeof(I2C::hardware_resource_t));
				firstTime = true;
			}
			_hRes = resI2C1;
			break;
		default:
			ERROR("Undefined I2C port");
			_hRes = 0;
			return;
	}

	if (firstTime) { // first time configuring peripheral
		_hRes->port = port;
		_hRes->frequency = frequency;
		_hRes->configured = false;
		_hRes->instances = 0;
	#ifdef USE_FREERTOS
		_hRes->resourceSemaphore = xSemaphoreCreateBinary();
		if (_hRes->resourceSemaphore == NULL) {
			_hRes = 0;
			ERROR("Could not create I2C resource semaphore");
			return;
		}
		vQueueAddToRegistry(_hRes->resourceSemaphore, "I2C Resource");
		xSemaphoreGive( _hRes->resourceSemaphore ); // give the semaphore the first time

		_hRes->transmissionFinished = xSemaphoreCreateBinary();
		if (_hRes->transmissionFinished == NULL) {
			_hRes = 0;
			ERROR("Could not create I2C transmission semaphore");
			return;
		}
		vQueueAddToRegistry(_hRes->transmissionFinished, "I2C Finish");
		xSemaphoreGive( _hRes->transmissionFinished ); // ensure that the semaphore is not taken from the beginning
		xSemaphoreTake( _hRes->transmissionFinished, ( TickType_t ) portMAX_DELAY ); // ensure that the semaphore is not taken from the beginning
	#else
		_hRes->transmissionFinished = true;
		_hRes->resourceSemaphore = false;
	#endif

		// Configure pins for I2C and I2C peripheral accordingly
		if (port == PORT_I2C1) {
			/* Peripheral clock enable */
			LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_I2C1);

			/**I2C1 GPIO Configuration
			PB10     ------> I2C1_SCL
			PB11     ------> I2C1_SDA
			*/
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOB);
			GPIO_InitStruct.Pin = LL_GPIO_PIN_10 | LL_GPIO_PIN_11;
			GPIO_InitStruct.Speed = LL_GPIO_SPEED_HIGH;
			GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
			GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
			GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_OPENDRAIN;
			GPIO_InitStruct.Alternate = LL_GPIO_AF_1;
			LL_GPIO_Init(GPIOB, &GPIO_InitStruct);

			/* I2C1 interrupt Init */
			NVIC_SetPriority(I2C1_IRQn, I2C_INTERRUPT_PRIORITY);
			NVIC_EnableIRQ(I2C1_IRQn);
		}
	}

	_hRes->instances++;
}

void I2C::ConfigurePeripheral()
{
	LL_I2C_InitTypeDef I2C_InitStruct;

	if (!_hRes) return;

	if (!_hRes->configured) { // only configure periphiral once
		switch (_hRes->port) {
			case PORT_I2C1:
				_hRes->instance = I2C1;
				break;
			default:
				_hRes = 0;
				ERROR("Undefined I2C port");
				return;
		}

		/* Reset I2C2 data registers */
	    if (LL_I2C_DeInit(_hRes->instance) != SUCCESS) {
	    	_hRes = 0;
	    	ERROR("I2C Error initializing");
			return;
	    }

	    /* Configure the Master to operate in 7-bit or 10-bit addressing mode */
	    /* Reset Value is LL_I2C_ADDRESSING_MODE_7BIT                         */
	    //LL_I2C_SetMasterAddressingMode(_hRes->instance, LL_I2C_ADDRESSING_MODE_7BIT);

	    /* Enable Peripheral in I2C mode */
	    /* Reset Value is I2C mode */
	    //LL_I2C_SetMode(_hRes->instance, LL_I2C_MODE_I2C);

	    /* Set fields of initialization structure:
	     *  - Peripheral Mode     = Mode I2C
	     *  - Timing Value        = fast Mode @400kHz with I2CCLK = 48 MHz
	     *                          rise time = 100ns,
	     *                          fall time = 10ns
	     *  - Analog Filter       = Enabled
	     *  - Digital Filter      = Disabled
	     *  - Own Address1        = No own address 1
	     *  - Type of Acknowledge = Acknowledge bytes/address received
	     *  - Own Address 1 Size  = default value Slave Address in 7-bit
	    */
	    I2C_InitStruct.PeripheralMode  = LL_I2C_MODE_I2C;
	    I2C_InitStruct.Timing          = 0x00901850; // 400 kHz I2C frequency @ 48 MHz I2C clock  (Timing register value is computed with the STM32CubeMX Tool)
	    I2C_InitStruct.AnalogFilter    = LL_I2C_ANALOGFILTER_ENABLE;
	    I2C_InitStruct.DigitalFilter   = 0x00;
	    I2C_InitStruct.OwnAddress1     = 0x00;
	    I2C_InitStruct.TypeAcknowledge = LL_I2C_ACK;
	    I2C_InitStruct.OwnAddrSize     = LL_I2C_OWNADDRESS1_7BIT;

	    /* Initialize I2C instance according to parameters defined in initialization structure. */
	    if (LL_I2C_Init(_hRes->instance, &I2C_InitStruct) != SUCCESS)
	    {
			_hRes = 0;
			ERROR("Could not initialize I2C port");
			return;
	    }

	    _hRes->configured = true;
	}
}
